[metadata]
name = flextools
version = attr: flextoolslib.version
description = A tool for running Python scripts on FieldWorks Language Explorer projects
long_description = file: README.md
url = https://github.com/cdfarrow/flextools
license_files = LICENSE.txt

author = Craig Farrow
author_email = flextoolshelp@gmail.com

platforms = ['Windows', 'Linux']
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Text Processing :: Linguistic
        Topic :: Database
        License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)


[options]
python_requires = >=3.6, <3.9


# The libraries needed at runtime.
install_requires =
    flexlibs>=1.1.6

# Tell setuptools about our Python package found in the folder 
# 'flextoolslib', and configure it to be installed as 'flextools' 
# (i.e. into site-packages/flextools).
# This will contain the sub-folders from the flextoolslib folder:
#
# flextoolslib
#   ├───code
#   ├───docs
#   └───icons
#
    
package_dir =
    flextools = flextoolslib

# The docs and icons folders are specified in MANIFEST.in
# 'include_package_data = True' includes them in the wheel.
include_package_data = True

# Specify which Python versions we support:
[bdist_wheel]
python-tag=py36.py37.py38
