[metadata]
name = flextoolslib
version = attr: flextoolslib.version
description = A tool for running Python scripts on FieldWorks Language Explorer projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cdfarrow/flextools
license = "GPL-2.0-or-later"
license_files = LICENSE.txt

author = Craig Farrow
author_email = flextoolshelp@gmail.com

platforms = 'Windows'
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Topic :: Text Processing :: Linguistic
        Topic :: Database

[options]
python_requires = >=3.9, <3.14

# The libraries needed at runtime.
install_requires =
    flexlibs>=1.2.7
    cdfutils>=1.1.1, < 1.2

# Tell setuptools about our Python package found in the folder 
# 'flextoolslib', and configure it to be installed as 'flextoolslib' 
# (i.e. into site-packages/flextoolslib).
# This will contain the sub-folders from the flextoolslib folder:
#
# flextoolslib
#   ├───code
#   ├───docs
#   └───icons
#
    
package_dir =
    flextoolslib = flextoolslib

# The docs and icons folders are specified in MANIFEST.in
# 'include_package_data = True' includes them in the wheel.
include_package_data = True


